--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,3 +7,15 @@ on:
 
 jobs:
   build-push-docker-image
+    name: Build and Push Docker Image to Amazon ECR
+    runs-on: ubuntu-latest
+
+    steps:
+     - name: Repository Checkout
+       uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Run test
+        run: npm test
