Creación de workflow

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ on:
       - 'v*'
 
 jobs:
-  build-push-docker-image
+  build-push-docker-image:
     name: Build and Push Docker Image to Amazon ECR
     runs-on: ubuntu-latest
 
