--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,3 +19,22 @@ jobs:
         
      - name: Run test
        run: npm test
+
+     - name: Configure aws credentials
+       uses: aws-actions/configure-aws-credentials@v4
+       with:
+        aws-access-key-id: ${{ secrets.AWS_ECR_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_ECR_SECRET_ACCESS_KEY }}
+        aws-region: ${{ vars.AWS_ECR_REGION }}
+
+     - name: Login to Amazon ECR
+       id: login-ecr
+       user: aws-actions/amazon-ecr-login@v2
+
+     - name: Build and Push Docker Image to Amazon ECR
+       env: 
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: notes-app-cicd-repo
+       run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:1.0 -f Dockerfile
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:1.0
