--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
 
      - name: Login to Amazon ECR
        id: login-ecr
-       user: aws-actions/amazon-ecr-login@v2
+       uses: aws-actions/amazon-ecr-login@v2
 
      - name: Build and Push Docker Image to Amazon ECR
        env: 
