--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,5 +33,5 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: notes-app-cicd-repo
        run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:1.0 -f Dockerfile
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:1.0 -f Dockerfile .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:1.0
